--- a/src/components/SingleRecipe.css
+++ b/src/components/SingleRecipe.css
@@ -8,7 +8,7 @@
   box-shadow: 2.5px 2.5px 40px rgb(165, 165, 165);
 }
 
-.title {
+.recpieTitle {
   display: flex;
   flex-direction: column;
   align-items: center;
