--- a/src/components/Post/post.css
+++ b/src/components/Post/post.css
@@ -55,7 +55,7 @@
 
 p {
   margin-top: 30px;
-  background-color: darkslategrey;
+  background-color: #204A32;
   color: white;
   padding: 20px;
 }
